# testdoc

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/: test.yml
.github/workflows/: test.yml
docs/: ref.md  requirements.txt
testdoc/: module.py
testdoc/tests/: test_testdoc.py
testdocs/: __init__.py  module.py
