[tool.poetry]
name = "testdoc"
version = "0.1.0"
description = "doctest++"
authors = ["Evan Voyles <evan.voyles@intrafentech.com>"]
readme = "README.md"
include = [
    { path = "testdoc" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore-init-module-imports = true
fixable = ["I"]
select = ["E4", "E7", "E9", "F", "I", "D"]
ignore = ["D105", "D203", "D213"]